[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "koleo-cli"
version = "0.2.137.15"
description = "Koleo CLI"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Zoey !" },
]
maintainers = [
    { email = "cb98uzhd@duck.com" },
]
license = { text = "GPL-3.0" }
requires-python = ">=3.12"
keywords = ["koleo", "timetable", "trains", "rail", "poland"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/lzgirlcat/koleo-cli"
"Source (GitHub)" = "https://github.com/lzgirlcat/koleo-cli"
"Issue Tracker" = "https://github.com/lzgirlcat/koleo-cli/issues"

[project.scripts]
koleo = "koleo.cli:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "dev",
    "db/migrations",
    "db/old_migrations"
]
respect-gitignore = true

# Same as Black.
line-length = 120
indent-width = 4

# Assume Python 3.8
target-version = "py312"


[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "Q", "W291", "W292", "W293", "E501", "RUF"]
ignore = ["E712", "E501", "F405", "F403"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = ["F401"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
